# bevy_vello

./: Cargo.toml  to_pack_wasm.md
examples/avian/: Cargo.toml
examples/avian/src/: lib.rs  main.rs
examples/avian_web/: .gitignore  .yarnrc  package.json  tsconfig.json
examples/avian_web/src/: impl.ts  index.js
examples/demo/src/: main.rs
examples/drag_n_drop/src/: main.rs
examples/editor/: Cargo.toml
examples/editor/src/: lib.rs  main.rs
examples/editor/src/assets/: 2d_default.particles  tiger.json
examples/editor_web/: .yarnrc  package.json  webpack.config.js
examples/editor_web/js/: index.js
examples/editor_web/src/: app.ts  camera_control.ts  camera_controller.ts  impl.ts  index.js  utils.ts
examples/editor_web/static/: index.html
examples/lottie/src/: main.rs
examples/particles/: 2d_default.particles  Cargo.toml
examples/particles/src/: main.rs
examples/run_wasm/: Cargo.toml
examples/scene/src/: main.rs
examples/scene_ui/src/: main.rs
examples/svg/src/: main.rs
examples/text/src/: main.rs
examples/webpack/js/: index.js
src/: debug.rs  lib.rs
src/dock/: avain_picker.rs  camera_controller.rs  commands.rs  entity_modifier.rs  entity_remover.rs  entity_spawner.rs  lottie_loader.rs  mod.rs  particle_loader.rs  stream_factory.rs  svg_loader.rs
src/integrations/: error.rs  mod.rs
src/integrations/hanabi/: mod.rs  plugin.rs
src/integrations/lottie/: parse.rs  theme.rs
src/render/: extract.rs  mod.rs  plugin.rs  prepare.rs  systems.rs
src/text/: font.rs
