[workspace]
resolver = "2"
members = [
  "examples/run_wasm",
  "examples/demo",
  "examples/drag_n_drop",
  "examples/text",
  "examples/scene",
  "examples/scene_ui",
  "examples/svg",
  "examples/lottie",
  "examples/scene_ui",
  "examples/particles",
  "examples/editor",
  "examples/avian"
]

[workspace.package]
edition = "2021"
version = "0.5.1"
license = "MIT OR Apache-2.0"
repository = "https://github.com/linebender/bevy_vello"

[workspace.dependencies]
bevy = { version = "0.14.0", default-features = false, features = [
  "bevy_asset",
  "bevy_winit",
  "bevy_core_pipeline",
  "bevy_pbr",
  "bevy_render",
  "bevy_ui",
#  "multi-threaded",
  "x11",
  "tonemapping_luts",
  "bevy_gizmos",
] }

[package]
name = "bevy_vello"
description = "Render assets and scenes in Bevy with Vello"
authors = [
  "Sebastian Hamel <sebjfk@gmail.com>",
  "Spencer C. Imbleau <spencer@imbleau.com>",
]
keywords = ["gamedev", "graphics"]
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[lib]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bevy = { workspace = true }
vello = {path = "../study_vello"}
vello_svg = {path = "../study_vello/integrations/vello_svg"}
velato = {path = "../study_vello/integrations/velato"}
once_cell = "1.19.0"
bevy_hanabi = {path = "../bevy_hanabi", features = ["2d"] }
thiserror = "1.0.61"
# TODO: Remove after https://github.com/linebender/velato/pull/19
serde_json = "1"
crossbeam-channel = "0.5"
futures = "0.3"
avian2d = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3.42"

[features]
default = ["svg", "lottie"]
svg = []
lottie = []
experimental-dotLottie = ["lottie"]
particles = []
