[package]
name = "avian"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
publish = false

[lib]
name = "avian"
crate-type = ["cdylib"]

[[bin]]
# Stop the PDB collision warning on windows
name = "avian_bin"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bevy_vello = { path = "../../" }
bevy = { workspace = true }
wasm-bindgen = "0.2.65"
avian2d = "0.1"