[package]
name = "editor"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
publish = false

[lib]
name = "editor"
crate-type = ["cdylib"]

[[bin]]
# Stop the PDB collision warning on windows
name = "editor_bin"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bevy_vello = { path = "../../" , features = ["svg", "lottie"]}
bevy = { workspace = true }
wasm-bindgen = "0.2.65"
js-sys = "0.3.64"
wasm-bindgen-futures = "0.4.42"
futures = "0.3"