[package]
name = "particles"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bevy_hanabi = { path = "../../../bevy_hanabi", features = ["2d"] }

#particle won't work with multi-threaded
bevy = { version = "0.13.0", default-features = false, features = [
  "bevy_asset",
  "bevy_winit",
  "bevy_core_pipeline",
  "bevy_pbr",
  "bevy_render",
  "bevy_ui",
#  "multi-threaded",
  "x11",
  "tonemapping_luts",
  "bevy_gizmos",
  "bevy_sprite"
] }

bevy_vello = { path = "../../", features = ["particles"]}