[package]
name = "particles"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bevy_hanabi = { path = "../../../bevy_hanabi", features = ["2d"] }
ron = "0.8"
#particle won't work with multi-threaded
bevy = { workspace = true}

bevy_vello = { path = "../../", features = ["particles"]}